--- a/www/templates/maps.html
+++ b/www/templates/maps.html
@@ -1,9 +1,10 @@
 <ion-view view-title="Mapas do Circuito">
 <ion-content>
       <div class="list">
-      <a class="item item-thumbnail-left" ng-click="openLink(map.url)" ng-repeat="map in maps track by map.id">
+      <a class="item item-thumbnail-left item-icon-right" ng-click="openLink(map.url)" ng-repeat="map in maps track by map.id">
         <img ng-src="{{map.thumbnail}}" ng-if="map.thumbnail.startsWith('http')">
         <h2 class="mapTitle">{{map.title}}</h2>
+        <i class="icon ion-chevron-right"></i>
          <div data-ng-bind-html="map.excerpt" class="resumo"></div>
          <p><span am-time-ago="map.date"></span></p>
     </a>
