--- a/www/templates/news.html
+++ b/www/templates/news.html
@@ -1,14 +1,10 @@
 <ion-view view-title="Notícias">
 <ion-content>
-      <ion-refresher
-        pulling-text="Pull to refresh..."
-        on-refresh="loadNewNews()">
-      </ion-refresher>
       <div class="list">
       <a class="item item-thumbnail-left" ng-click="openLink(new.url)" ng-repeat="new in news track by new.id">
         <img ng-src="{{new.thumbnail}}" ng-if="new.thumbnail.startsWith('http')">
         <h2 class="newTitle">{{new.title}}</h2>
-         <p class="newResumo">{{new.excerpt}}</p>
+         <div data-ng-bind-html="new.excerpt" class="newResumo"></div>
          <p><span am-time-ago="new.date"></span></p>
     </a>
     </div>
