--- a/www/templates/home.html
+++ b/www/templates/home.html
@@ -4,6 +4,7 @@
 <a href="#/schedule" class="button button-block item-icon-right">Horário<i class="icon ion-ios-calendar-outline"></i></a>
 <a href="#/access" class="button button-block item-icon-right">Accessos<i class="icon ion-ios-location"></i></a>
 <a href="#/maps" class="button button-block item-icon-right">Mapas<i class="icon ion-map"></i></a>
+<a href="#/instacivrfeed" class="button button-block item-icon-right">Fotos<i class="icon ion-map"></i></a>
 
 </ion-content>
 </ion-view>
