--- a/www/templates/restaurants.html
+++ b/www/templates/restaurants.html
@@ -2,9 +2,7 @@
 <ion-content>
 
       <div class="list">
-        <ion-refresher pulling-text="Pull to refresh..." on-refresh="doRefresh()">
-        </ion-refresher>
-      <a class="item item-thumbnail-left item-icon-right" ng-href="tel:{{restaurant.custom_fields.client_name}}" ng-repeat="restaurant in restaurants">
+      <a class="item item-thumbnail-left item-icon-right" ng-href="tel:{{restaurant.custom_fields.client_name}}" ng-repeat="restaurant in restaurants track by restaurant.id">
         
         
         
